# application_de_visualisation

./: .gitignore  app.py  build_projection_table.py  clean_dataset.py  clean_duckdb.py  convert_climat_to_parquet.py  convert_climat_to_parquet_duckdb.py  create_database.py  create_fusion_table.py  map_zone.html  map_zone.py  normalize_duckdb.py  rebuild_climat_table.py  requirements.txt  test.py
config/: __init__.py  constants.py
modules/: __init__.py  ai_engine.py  data_loader.py  map_utils.py  prediction.py  utils.py  visualization.py
pages/: 1_Accueil.py  1_Climat.py  2_Rendement.py  3_Climat_Rendement.py
partie_climat/: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
partie_climat/.github/workflows/: ci.yml
partie_climat/.streamlit/: config.toml
partie_climat/data/: meteo1.csv
partie_climat/data/Projections/: dataset_clean_climat_V0_3_optimiste_2021_2040.csv  dataset_clean_climat_V0_3_optimiste_2041_2060.csv  dataset_clean_climat_V0_3_pessimiste_2021_2040.csv  dataset_clean_climat_V0_4_optimiste_2041_2060_cycle_vigne.csv
partie_climat/src/: Giec_scenarios_syndicat.py  carte_inrae.py  carte_inrae_previsions.py  cniv_meteofrance_explo.py  main.py  metrics_A_meteo_fr.pkl  metrics_B_meteo_fr.pkl  model_B_meteo_fr.pkl  scores_B_meteo_fr.pkl
partie_climat/tests/: test_Giec_scenarios_syndicat.py  test_carte_inrae.py  test_carte_inrae_previsions.py  test_cniv_meteofrance_explo.py
partie_rendement_et_volume/: .gitignore  advanced_analysis_engine.py  app.py  decision_engine.py  extreme_detection.py  init_duckdb.py  kpi_engine.py  parquet.py  (+3 more)
(+31 files in other folders)
